--- a/static/css/video_queue_item.css
+++ b/static/css/video_queue_item.css
@@ -17,10 +17,6 @@
     margin-top:30px;
 }
 
-.video-container{
-    height:140px;
-}
-
 .video-title{
     position:absolute;
     margin-top: 0px;
@@ -52,7 +48,8 @@
 }
 
 .video-container{
-    width:100%;
+    width:730px;
+    height:140px;
     padding-right:5px;
     padding-left:8px;
     padding-top:5px;
